--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*.ipynb
+*.csv
+*.xlsx
+
 # Django #
 *.log
 *.pot
@@ -5,6 +9,7 @@
 __pycache__
 db.sqlite3
 media
+staticfiles
 
 # Backup files #
 *.bak
